# buff2steam

./: .dockerignore  .env.buff2steam.example  .env.steam-skin-ops.example  .gitignore  AGENTS.md  DEPLOY_ASTRBOT.md  Dockerfile  README.md  compose.astrbot.example.yml  compose.astrbot.yml  compose.buff2steam.yml  compose.yml  config.example.yaml  debug_cookies.py  get_cookies.py  probe.py  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/workflows/: ci.yml  commit-convention.yml  docker.yml
astrbot_plugin_buff2steam/: _conf_schema.json  main.py  metadata.yaml
config/: profit.example.yaml
plugins/astrbot_plugin_steam_skin_ops/: _conf_schema.json  main.py  metadata.yaml
scripts/: check_commit_message.py
src/: __init__.py  buff_client.py  c5_client.py  currency_converter.py  html_report.py  main.py  profit_calculator.py  report.py  steam_client.py  transaction_matcher.py
src/monitoring/: __init__.py  models.py  runner.py  service.py  smis_client.py  storage.py  strategy.py
src/notifications/: __init__.py  astrbot.py  base.py  pushplus.py
src/service/: __init__.py  app.py  manager.py  runtime.py
src/steam_skin_ops/: __init__.py
tests/: test_astrbot_plugin.py  test_c5_client.py  test_calculator.py  test_commit_message.py  test_converter.py  test_incremental_fetch.py  test_matcher.py  test_monitoring.py  test_report.py  test_service.py  test_steam_client.py
tests/monitor/: test_service.py
tests/plugin/: test_astrbot_plugin.py
tests/profit/: test_c5_client.py  test_calculator.py  test_converter.py  test_incremental_fetch.py  (+4 more)
(+22 files in other folders)
